# fAIr-models

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  codecov.yml  fair_zenml_patch.pth  justfile  main.py  mkdocs.yml  pyproject.toml
.github/scripts/: detect_models.py
.github/workflows/: build-model-images.yml  build-zenml.yml  docs.yml  k8s-integration.yml  publish-pypi.yml  publish-testpypi.yml  style.yml  validate-stac.yml  validate-tofu.yml
.zen/: config.yaml
data/sample/buildings-banepa/: stac-item.json
data/sample/buildings-banepa-classification/: stac-item.json
data/sample/buildings-banepa-detection/: stac-item.json
data/sample/buildings-banepa-segmentation/: stac-item.json
data/sample/train/: classification_labels.csv  detection_labels.json
docs/: architecture.md  changelog.md  contributing-model.md  getting-started.md  index.md  k8s-dev.md  schemas.md  zenml.md
docs/contributing/: index.md  model.md
docs/development/: index.md  k8s.md
docs/reference/: index.md  schemas.md  stac.md  utils.md  zenml.md
example/: iris.py  iris.yaml
examples/: building_segmentation.ipynb  cards.html  iris.py  iris.yaml  iris_inference.yaml  iris_train.yaml
examples/building_segmentation/: README.md  download.py  finetune.py  promote.py  register_basemodel.py  register_dataset.py
examples/building_segmentation/config/: generated_inference.yaml  train.yaml
examples/classification/: README.md  run.py
examples/data/: OAM-386683-220234-19.tif  OAM-386683-220234-19.tif.aux.xml  OAM-386683-220235-19.tif  OAM-386683-220235-19.tif.aux.xml  OAM-386683-220236-19.tif  OAM-386683-220236-19.tif.aux.xml  OAM-386683-220237-19.tif  OAM-386683-220237-19.tif.aux.xml  OAM-386683-220238-19.tif  OAM-386683-220238-19.tif.aux.xml  OAM-386683-220239-19.tif  OAM-386683-220239-19.tif.aux.xml  OAM-386683-220240-19.tif  OAM-386683-220240-19.tif.aux.xml  OAM-386683-220241-19.tif  OAM-386683-220241-19.tif.aux.xml  OAM-386683-220242-19.tif  OAM-386683-220242-19.tif.aux.xml  OAM-386683-220243-19.tif  OAM-386683-220243-19.tif.aux.xml  OAM-386683-220244-19.tif  OAM-386683-220244-19.tif.aux.xml  OAM-386683-220245-19.tif  OAM-386683-220245-19.tif.aux.xml  OAM-386683-220246-19.tif  OAM-386683-220246-19.tif.aux.xml  OAM-386683-220247-19.tif  OAM-386683-220247-19.tif.aux.xml  OAM-386683-220248-19.tif  OAM-386683-220248-19.tif.aux.xml  OAM-386683-220249-19.tif  OAM-386683-220249-19.tif.aux.xml  OAM-386683-220250-19.tif  OAM-386683-220250-19.tif.aux.xml  OAM-386684-220234-19.tif  OAM-386684-220234-19.tif.aux.xml  OAM-386684-220235-19.tif  OAM-386684-220235-19.tif.aux.xml  OAM-386684-220236-19.tif  OAM-386684-220236-19.tif.aux.xml  (+660 more)
examples/detection/: README.md  run.py
examples/segmentation/: README.md  run.py
examples/unet/: README.md  download.py  finetune.py  predict.py  promote.py  register_basemodel.py  register_dataset.py  run.py
examples/unet/config/: generated_inference.yaml  generated_train.yaml  inference.yaml
fair/: __init__.py  _patch_zenml.py  client.py  params.py
fair/infra/: knative.py
fair/schemas/: __init__.py  base_model_requirements.json
fair/serve/: base.py
fair/serve/tests/: test_base.py
fair/stac/: backend.py  builders.py  catalog_manager.py  collections.py  constants.py  pgstac_backend.py  validators.py  versioning.py
fair/utils/: __init__.py  data.py  model_validator.py  validation.py
fair/zenml/: config.py  instrumentation.py  metrics.py  promotion.py  runner.py
fair_integrations/registry/: __init__.py  flavor.py  stac.py
fair_integrations/stacks/: local.yaml
fair_models/schemas/: keywords.json
fair_models/stac/: builders.py  catalog_manager.py  collections.py  constants.py  validators.py
fair_models/zenml/: config.py  promotion.py  steps.py
infra/ci/: helmfile.yaml  justfile  kind-config.yaml
infra/dev/: Makefile  helmfile.yaml  justfile  kind-config.yaml  ports.conf
infra/dev/minio/: values.yaml
infra/dev/mlflow/: values.yaml
infra/dev/postgres/: init-databases.sql  statefulset.yaml
infra/dev/scripts/: seed_data.py
infra/dev/stac/: values.yaml
infra/dev/zenml/: configmap.yaml  deployment.yaml  service.yaml  values.yaml
infra/dok8s/: .gitignore  Makefile  README.md  cluster-issuer.yaml  env.example  helmfile.yaml  infra.tf  init.sql  justfile  main.tf  outputs.tf  services.tf  terraform.tfvars.example  variables.tf
models/: Readme.md  conftest.py  test_integration.py
models/example_unet/: Dockerfile  Dockerfile.dockerignore  README.md  pipeline.py  stac-item.json
models/ramp/: Dockerfile  README.md  pipeline.py  stac-item.json
models/resnet18_classification/: Dockerfile  Dockerfile.dockerignore  README.md  pipeline.py  stac-item.json
models/unet_segmentation/: Dockerfile  Dockerfile.dockerignore  README.md  pipeline.py  stac-item.json
models/yolo11n_detection/: Dockerfile  Dockerfile.dockerignore  README.md  pipeline.py  stac-item.json
models/yolo_v8_segmentation/: Dockerfile  Dockerfile.dockerignore  README.md  pipeline.py  stac-item.json
models/yolo_v8_v1/: Dockerfile  README.md  pipeline.py  stac-item.json
models/yolo_v8_v2/: Dockerfile  README.md  pipeline.py  stac-item.json
scripts/: convert_segmentation_to_classification.py  convert_segmentation_to_detection.py  smoke_test_inference_image.py  validate_model.py  validate_stac_items.py
stac_catalog/: catalog.json
stac_catalog/base-models/: collection.json
stac_catalog/datasets/: collection.json
stac_catalog/local-models/: collection.json
stacks/: ci-k8s.yaml  docker.yaml  dok8s.yaml  k8s.yaml  local.yaml
tests/: test_backend.py  test_builders.py  test_catalog_manager.py  test_client_knative_coverage.py  test_config.py  test_coverage_targets.py  test_data.py  test_instrumentation.py  test_integration.py  test_live_predict.py  test_metrics.py  test_misc_coverage.py  test_model_suite_discovery.py  test_model_validator.py  test_patch_zenml.py  test_pgstac_backend.py  test_pipeline_e2e.py  test_promotion.py  test_repository_coverage_regressions.py  test_validators.py  test_versioning.py
zenml/stacks/: local.yaml
(+816 files in other folders)
