[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fair"
version = "0.0.1"
description = "Model registry and ML pipeline orchestration for fAIr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pystac[validation]>=1.14.3",
    "zenml>=0.93.3",
]

[tool.hatch.build.targets.wheel]
packages = ["fair", "models"]

[tool.uv.sources]
torchgeo = { git = "https://github.com/kshitijrajsharma/torchgeo.git", rev = "feature/opeanaerialmap" }

[dependency-groups]
dev = [
    "ty",
    "ruff",
    "pytest>=8.0",
]
ci = [
    {include-group = "dev"},
    {include-group = "example"},
]
local = [
    "zenml[server]>=0.93.3",
]
example = [
    "matplotlib>=3.10.8",
    "pyarrow>=23.0.1",
    "torch>=2.0",
    "torchgeo",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
